Fixed flip card image bug, more trading card buttons spacing

--- a/src/App.css
+++ b/src/App.css
@@ -33,10 +33,9 @@
 .div-card-buttons-rows {
   display: flex;
   flex-direction: row;
-  flex-wrap: wrap;
   justify-content: space-evenly;
   gap: 10px;
-  padding: 1em;
+  padding: 0.5em;
 }
 
 .div-sold-legend {
@@ -199,7 +198,7 @@
   flex-direction: column;
   flex-wrap: wrap;
   justify-content: center;
-  padding: 1em;
+  padding: 0.5em;
 }
 
 .div-home-buttons {
